--- a/src/assets/style/main.scss
+++ b/src/assets/style/main.scss
@@ -45,6 +45,7 @@ h3 {
 }
 
 @import "@/components/Header/Header.scss",
+        "@/components/Language/Language.scss",
         "@/components/HeaderContent/HeaderContent.scss",
         "@/components/Advantage/Advantage.scss",
         "@/components/СallToAction/СallToAction.scss",
