--- a/src/components/HeaderContent/HeaderContent.scss
+++ b/src/components/HeaderContent/HeaderContent.scss
@@ -114,7 +114,7 @@
 
     &-title {
         font-size: 55px;
-        font-family: $Poppins;
+        font-family: $Inter;
         font-weight: 700;
         line-height: 77.5px;
         color: #2E2E2E;
@@ -144,7 +144,7 @@
 
     &-btn {
         font-size: 14px;
-        font-family: $Poppins;
+        font-family: $Inter;
         font-weight: 400;
         color: #000000;
         line-height: 24px;
