--- a/src/components/СallToAction/СallToAction.scss
+++ b/src/components/СallToAction/СallToAction.scss
@@ -53,7 +53,7 @@
 
     &__title {
         font-size: 64px;
-        font-family: $Poppins;
+        font-family: $Inter;
         font-weight: 600;
         color: #2E2E2E;
         margin-bottom: 40px;
