--- a/src/components/Advantage/Advantage.scss
+++ b/src/components/Advantage/Advantage.scss
@@ -25,13 +25,13 @@
     &__title {
        color: black;
        font-size: 20px;
-       font-family: $Poppins;
+       font-family: $Inter;
        font-weight: 700;
        margin: 12px 0 10px 0; 
     }
     &__text {
         font-size: 12px;
-        font-family: $Poppins;
+        font-family: $Inter;
         font-weight: 300;
         color: black;
     }
