--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,5 +1,5 @@
 .footer {
-    background: #B00000;
+    background: black;
     padding: 80px 0;
     @include media($xs) {
         padding: 50px 0;
@@ -70,6 +70,10 @@
         font-size: 14px;
         font-family: $Inter;
         font-weight: 600;
+        transition: 300ms;
+        &:hover {
+            color: #B00000;
+        }
     }
 
     &__socials {
